<resources>
    <string name="app_name">ChronoSnap</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login" translatable="false">Войти</string>
    <string name="password">Пароль</string>
    <string name="login_header">Вход</string>
    <string name="username_hint">Имя пользователя</string>
    <string name="action_stopwatch">Секундомер</string>
    <string name="action_statistics">Статистика</string>
    <string name="action_list">Список дел</string>
    <string name="action_calendar">Календарь</string>
    <string name="action_settings">Настройки</string>
    <string name="no_account">Ещё нет аккаунта?</string>
    <string name="registration">Регистрация</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="have_account">Уже есть аккаунт?</string>
    <string name="email_input_error">Некорректный email</string>
    <string name="password_input_error">Пароль должен содержать от 8 до 25 символов</string>
    <string name="empty_string">Пустое поле</string>
    <string name="in">Через</string>
    <string name="under_stopwatch_text">Через 10 минут после запуска вам придет \n напоминание о текущей записи</string>
    <string name="on_stopwatch_text">"Нажмите для начала\nзаписи активности "</string>
    <string name="notifications">Уведомления</string>
    <string name="from">С</string>
    <string name="to">до</string>
    <string name="every">каждые</string>
    <string name="minutes">минут</string>
    <string name="categories">Категории</string>
    <string name="add_category">Добавить категорию</string>
    <string name="account_control">Управление аккаунтом</string>
    <string name="edit_info">Изменить данные</string>
    <string name="log_out">Выйти из аккаунта</string>
    <string name="section_1">Срочно и важно</string>
    <string name="section_2">Срочно, но не важно</string>
    <string name="section_3">Не срочно, но важно</string>
    <string name="section_4">Не срочно и не важно</string>
    <string name="day">День</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="add_task">Добавить задачу</string>
    <string name="saving_up">Сохранение\n</string>
    <string name="choose_category">Выберите категорию:</string>
    <string name="saving_checked_text">Отобразить экранное время за период записи</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="not_more_than">(не более 16)</string>
    <string name="start_time">Начало отправки уведомлений</string>
    <string name="end_time">Конец отправки уведомлений</string>
    <string name="interval">Интервал отправки уведомлений (мин)</string>
    <string name="undefined">Другое</string>
    <string name="game">Игры</string>
    <string name="audio">Музыка</string>
    <string name="video">Видео (приложения)</string>
    <string name="image">Фото и графика (приложения)</string>
    <string name="social">Соцсети</string>
    <string name="news">Новости</string>
    <string name="maps">Карты, навигация (приложения)</string>
    <string name="productivity">Работа, планирование</string>
    <string name="category_hint">Введите название категории</string>
    <string name="choose_color">Выберите цвет</string>
    <string name="task_hint">Введите задачу</string>
</resources>