<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.fragments.LoginFragment"
    android:gravity="center">

    <LinearLayout
        android:layout_marginTop="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textSize="28sp"
            android:layout_marginBottom="50dp"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_height="wrap_content"
            android:layout_width="344dp"
            app:cardCornerRadius="8dp"
            app:strokeColor="@color/dark_gray"
            app:strokeWidth="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="22dp">

            <EditText
                android:id="@+id/username_et"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/username_hint"
                android:textColorHint="@color/dark_gray"
                android:textSize="14sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"/>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_height="wrap_content"
            android:layout_width="344dp"
            app:cardCornerRadius="8dp"
            app:strokeColor="@color/dark_gray"
            app:strokeWidth="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="22dp">

            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="Email"
                android:textColorHint="@color/dark_gray"
                android:textSize="14sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_height="wrap_content"
            android:layout_width="344dp"
            app:cardCornerRadius="8dp"
            app:strokeColor="@color/dark_gray"
            app:strokeWidth="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="52dp"
            android:padding="2dp">

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/password"
                android:textColorHint="@color/dark_gray"
                android:textSize="14sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_height="58dp"
            android:layout_width="344dp"
            app:cornerRadius="8dp"
            android:layout_margin="0dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:text="@string/sign_up"
            android:textSize="16sp">

        </com.google.android.material.button.MaterialButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:textSize="16sp"
            android:layout_marginTop="42dp"/>

        <TextView
            android:id="@+id/lgn_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="16sp"
            android:textColor="@color/blue"/>
    </LinearLayout>

</FrameLayout>