<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:minWidth="300dp"
    android:maxWidth="600dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    android:elevation="4dp"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="4dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="12dp">
        <LinearLayout
            android:minWidth="300dp"
            android:maxWidth="600dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="?attr/cardBackgroundColor">

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saving_up"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_marginTop="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_category"
                    android:textSize="16sp"
                    android:layout_marginBottom="5dp"/>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="?attr/cardBackgroundColor">
                    <Spinner
                        android:id="@+id/category_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"/>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="10dp">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/show_screentime_checkbox"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:checked="true"
                    app:buttonTint="@color/blue"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saving_checked_text"
                    android:textSize="16sp"
                    android:layout_margin="7dp"/>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_activity_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:cornerRadius="11dp"
                android:text="@string/save"
                app:backgroundTint="@color/blue"
                android:layout_marginBottom="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_activity_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:cornerRadius="11dp"
                android:text="@string/delete"
                app:backgroundTint="@android:color/transparent"
                android:textColor="@color/red"
                app:strokeWidth="1dp"
                app:strokeColor="@color/red"
                android:layout_marginBottom="15dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>