<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:minWidth="300dp"
    android:maxWidth="600dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    android:elevation="4dp"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="4dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="12dp">
        <LinearLayout
            android:minWidth="300dp"
            android:maxWidth="600dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_height="wrap_content"
                android:layout_width="344dp"
                app:cardCornerRadius="8dp"
                app:strokeColor="@color/dark_gray"
                app:strokeWidth="1dp"
                android:layout_marginTop="42dp"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/category_et"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/task_hint"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/transparent"/>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_category"
                    android:textSize="16sp"
                    android:layout_marginBottom="5dp"/>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Spinner
                        android:id="@+id/category_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"/>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_activity_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:cornerRadius="11dp"
                android:text="@string/save"
                app:backgroundTint="@color/blue"
                android:layout_marginBottom="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_activity_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:cornerRadius="11dp"
                android:text="@string/delete"
                app:backgroundTint="@android:color/transparent"
                android:textColor="@color/red"
                app:strokeWidth="1dp"
                app:strokeColor="@color/red"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>